--- a/aboutme.html
+++ b/aboutme.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Generic - Forty by HTML5 UP</title>
+		<title>Noah Jaskiewicz</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -19,7 +19,7 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo"><strong>Forty</strong> <span>by HTML5 UP</span></a>
+						<a href="index.html" class="logo"><strong>Noah</strong> <span>Jaskiewicz</span></a>
 						<nav>
 							<a href="#menu">Menu</a>
 						</nav>
@@ -29,13 +29,13 @@
 					<nav id="menu">
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
-							<li><a href="landing.html">Landing</a></li>
-							<li><a href="generic.html">Generic</a></li>
-							<li><a href="elements.html">Elements</a></li>
+							<li><a href="aboutme.html">About Me</a></li>
+							<!--<li><a href="landing.html">Landing</a></li> 
+							<li><a href="elements.html">Elements</a></li> -->
 						</ul>
 						<ul class="actions stacked">
-							<li><a href="#" class="button primary fit">Get Started</a></li>
-							<li><a href="#" class="button fit">Log In</a></li>
+							<!--<li><a href="#" class="button primary fit">Get Started</a></li>
+							<li><a href="#" class="button fit">Log In</a></li> -->
 						</ul>
 					</nav>
 
@@ -46,12 +46,13 @@
 							<section id="one">
 								<div class="inner">
 									<header class="major">
-										<h1>Generic</h1>
+										<h1>About Me</h1>
 									</header>
-									<span class="image main"><img src="images/pic11.jpg" alt="" /></span>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fergiat. Pellentesque in mi eu massa lacinia malesuada et a elit. Donec urna ex, lacinia in purus ac, pretium pulvinar mauris. Curabitur sapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit.</p>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
-									<p>Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis. Praesent rutrum sem diam, vitae egestas enim auctor sit amet. Pellentesque leo mauris, consectetur id ipsum sit amet, fersapien risus, commodo eget turpis at, elementum convallis elit. Pellentesque enim turpis, hendrerit tristique lorem ipsum dolor.</p>
+									<span class="image main"><img src="/images/IMG_0085.JPG" alt="" style="width: 300px; height: auto;" /></span>
+									<p>Hi, my name is Noah, and I'm a senior at Rutgers University, double majoring in Mathematics and Computer Science. As a passionate learner, I serve as a learning assistant for Calculus I and II, where I help fellow students grasp complex mathematical concepts.</p>
+									<p>Currently, I am diving deep into financial engineering and stochastic calculus, studying these subjects independently. My upcoming research will focus on backwards stochastic differential equations, reflecting my keen interest in optimizing with randomness. I am eager to explore more about quantitative trading and portfolio management as I advance in my career.</p>
+									<p>I aspire to work as a quantitative trader/researcher, leveraging my skills in mathematics and computer science to solve problems. I previously interned at Corebridge on the credit section of the enterprise risk management team, where I implemented machine learning kernels to create distributions of our $200B portfolio, streamlined much of our data analysis using NumPy and pandas in Python, and performed financial modeling of our statutory capital. Additionally, I have worked on projects involving natural language processing and AI APIs.</p>
+									<p>In my free time, I enjoy reading, playing intramural basketball, and delving into my research interests. I also love playing games like poker, Catan, and various logic games. Competing in math and programming competitions is a significant part of my life; I proudly placed 2nd in the Garden State Math Competition and am rated in the top 2% on LeetCode.</p>
 								</div>
 							</section>
 
@@ -87,22 +88,22 @@
 									<div class="contact-method">
 										<span class="icon solid alt fa-envelope"></span>
 										<h3>Email</h3>
-										<a href="#">information@untitled.tld</a>
+										<a href="#">noahjaskiewicz@gmail.com</a>
 									</div>
 								</section>
-								<section>
+								<!--<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-phone"></span>
 										<h3>Phone</h3>
-										<span>(000) 000-0000 x12387</span>
+										<span>973 650 9707</span>
 									</div>
-								</section>
+								</section>  -->
 								<section>
 									<div class="contact-method">
 										<span class="icon solid alt fa-home"></span>
 										<h3>Address</h3>
-										<span>1234 Somewhere Road #5432<br />
-										Nashville, TN 00000<br />
+										<span>
+										Montclair, NJ 07043<br />
 										United States of America</span>
 									</div>
 								</section>
@@ -114,14 +115,9 @@
 					<footer id="footer">
 						<div class="inner">
 							<ul class="icons">
-								<li><a href="#" class="icon brands alt fa-twitter"><span class="label">Twitter</span></a></li>
-								<li><a href="#" class="icon brands alt fa-facebook-f"><span class="label">Facebook</span></a></li>
-								<li><a href="#" class="icon brands alt fa-instagram"><span class="label">Instagram</span></a></li>
-								<li><a href="#" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
-								<li><a href="#" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
-							</ul>
-							<ul class="copyright">
-								<li>&copy; Untitled</li><li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
+								<li><a href="https://github.com/noahwicz" class="icon brands alt fa-github"><span class="label">GitHub</span></a></li>
+								<li><a href="https://www.linkedin.com/in/noahjaskiewicz/" class="icon brands alt fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
+								<li><a href="https://leetcode.com/u/noahwicz/" class="icon brands alt" target="_blank"><img src="/assets/webfonts/Leetcode.svg" alt="LeetCode" style="width: 3.4em; height: 3.4em; vertical-align: middle;" /></a></li>
 							</ul>
 						</div>
 					</footer>
