updates to website, added achievements page

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
 						<ul class="links">
 							<li><a href="index.html">Home</a></li>
 							<li><a href="aboutme.html">About Me</a></li>
+							<li><a href="achievements.html">Achievements</a></li>
 							<!--<li><a href="landing.html">Landing</a></li>
 							
 							<li><a href="elements.html">Elements</a></li> -->
@@ -63,10 +64,10 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="/images/1718597504777.jpeg" alt="" style="width: 576px; height: 409;"/>
+										<img src="/images/amazon.jpeg" alt="" style="width: 576px; height: 409;"/>
 									</span>
 									<header class="major">
-										<h3><a href="/assets/webfonts/QuantNoahJaskiewicz.pdf" class="link">ERM Intern at Corebridge</a></h3>
+										<h3><a href="/assets/webfonts/NoahJaskiewicz.pdf" class="link">Software Developer Intern at Amazon</a></h3>
 										<p>Click here to see my resume!</p>
 									</header>
 								</article>
@@ -81,10 +82,10 @@
 								</article>
 								<article>
 									<span class="image">
-										<img src="/images/mathematics-research-photo.jpg" alt="" style="width: 864px; height: 410;"/>
+										<img src="/images/1718597504777.jpeg" alt="" style="width: 864px; height: 410;"/>
 									</span>
 									<header class="major">
-										<h3><a href="aboutme.html" class="link">Academic Interests</a></h3>
+										<h3><a href="aboutme.html" class="link">Credit Risk Intern at Corebridge</a></h3>
 										<p>Click Here to read my about me!</p>
 									</header>
 								</article>
@@ -111,7 +112,7 @@
 										<img src="/images/nerd.jpg" alt="" style="width: 864px; height: 409;"/>
 									</span>
 									<header class="major">
-										<h3><a href="aboutme.html" class="link">Achievements</a></h3>
+										<h3><a href="achievements.html" class="link">Achievements</a></h3>
 										<p>Click Here to see my Achievements!</p>
 									</header>
 								</article>
@@ -132,59 +133,6 @@
 						-->
 
 					</div>
-
-				<!-- Contact -->
-					<section id="contact">
-						<div class="inner">
-							<section>
-								<form method="post" action="#">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="6"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Clear" /></li>
-									</ul>
-								</form>
-							</section>
-							<section class="split">
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-envelope"></span>
-										<h3>Email</h3>
-										<a href="#">noahjaskiewicz@gmail.com</a>
-									</div>
-								</section>
-								<!--<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-phone"></span>
-										<h3>Phone</h3>
-										<span>973 650 9707</span>
-									</div>
-								</section>  -->
-								<section>
-									<div class="contact-method">
-										<span class="icon solid alt fa-home"></span>
-										<h3>Address</h3>
-										<span>
-										Montclair, NJ 07043<br />
-										United States of America</span>
-									</div>
-								</section>
-							</section>
-						</div>
-					</section>
 
 				<!-- Footer -->
 					<footer id="footer">
