changed amazon photo

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 							<section id="one" class="tiles">
 								<article>
 									<span class="image">
-										<img src="/images/amazonkuiper.jpeg" alt="" style="width: 576px; height: 409;"/>
+										<img src="/images/amazonkuiper.jpg" alt="" style="width: 576px; height: 409;"/>
 									</span>
 									<header class="major">
 										<h3><a href="/assets/webfonts/NoahJaskiewicz.pdf" class="link">Software Developer Intern at Amazon</a></h3>
